--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!-- saved from url=(0024)http://yoshka.github.io/ -->
+ 
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <meta http-equiv="Content-Security-Policy" content="default-src &#39;none&#39;; style-src &#39;unsafe-inline&#39;; img-src data:; connect-src: &#39;self&#39;">
-    <title>Page not found · GitHub Pages</title>
+   
+    <title> :3</title>
     <style type="text/css" media="screen">
       body {
         background-color: #f1f1f1;
